loading spinner, check for loose focus layout issues, remove duplicate code

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 li {
     color: white;
 }
+
+div.card-header {
+    font-weight: bolder;
+    color: white;
+}
